# NRE-AI

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  compose.yml  docker-compose.yml  genindex.html  index.html  main.py  objects.inv  plan.md  pyproject.toml  release-notes.txt  release-title.txt  requirements.txt  search.html  searchindex.js
.github/workflows/: develop-pipeline.yml  every-pipeline.yml  main-pipeline.yml  main.yml  regPR.yml  release.yml  stage-pipeline.yml
_sources/: index.rst.txt
data_processor/: city.py  json_manager.py  processor.py
docs/: conf.py
logs/PPO_1/: events.out.tfevents.1768604809.DESKTOP-BVEV9HF.29920.0
logs/PPO_2/: events.out.tfevents.1769123620.31ffb1eac73a.73.0
logs/PPO_3/: events.out.tfevents.1769124004.31ffb1eac73a.90.0
logs/PPO_4/: events.out.tfevents.1769125064.31ffb1eac73a.105.0
logs/PPO_5/: events.out.tfevents.1769125418.31ffb1eac73a.120.0
logs/PPO_6/: events.out.tfevents.1769126697.31ffb1eac73a.146.0
logs/PPO_7/: events.out.tfevents.1769128068.31ffb1eac73a.202.0
scripts/: example_data.json  manage.py  release_version.py  train.py
src/nre_ai/: __init__.py  agent.py  bot_state_processor.py  game_env.py  manager.py  mechanics.py  rl_agent.py  trading_env.py  train.py  train_agent.py
tests/: conftest.py  test_city_data.json
tests/integration/: test_scripts.py
tests/unit/: conftest.py  test_agent.py  test_bot_state_processor.py  test_manager.py  test_mechanics.py  test_placeholder.py  test_rl_agent.py  test_scripts.py  test_trading_env.py  test_workflows.py
