[project]
name = "nre-ai"
version = "0.5.0"
description = "AI for NewRomanEmpire game https://github.com/maryszawy/NRE"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Vronst", email = "vronst@gmail.com" },
	{ name = "TekienAgata", email = "tekienagata@gmail.com"},
	{ name = 'maryszawy', email = ""}
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "nre-city",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.basedpyright]  # I use this as lsp, add yours if needed
venvPath = "."
venv = ".venv"
extraPaths = ['submodule/NRE-City']

[project.scripts]
nre-ai = "nre_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8-pytest-style>=2.1.0",
    "pytest>=8.3.5",
    "toml>=0.10.2",
]
docs = [
    "sphinx>=8.2.3",
]

[tool.pytest.ini_options]
markers = [
	"regression: Tests that ensure previous bugs stay fixed"
	]
testpaths = "tests/"
pythonpath = "src/"

[tool.ruff]
line-length = 79
indent-width = 4
exclude = [
	"docs",
	]

[tool.ruff.lint]
extend-select = [
	"UP",  # pyupgrade
	"D",  # pydocstyle
	"F",  # flake8
	"E",  # pycodestyle
	"B",  # flake8-bugbear
	"SIM",  # flake8-simplify
	"I",  # isort
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = ""

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.workspace]
members = [
    "submodules/NRE-City",
]

[tool.uv.sources]
nre-city = { workspace = true }

[tool.ruff.lint.pydocstyle]
convention = "google"
